--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ nav.close ~ .dashboard {
   padding: 10px 14px;
   background-color: var(--panel-color);
   transition: var(--tran-05);
+  z-index: 10;
 }
 nav.close ~ .dashboard .top {
   left: 73px;
